deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fund-allocator
  labels:
    app: fund-allocator
  namespace: default
spec:
  selector:
    matchLabels:
      app: fund-allocator
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: fund-allocator
    spec:
      containers:
        - name: fund-allocator
          image: 192.168.1.103/fund-allocator:latest
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: config-volume
              mountPath: /configs/
      volumes:
        - name: config-volume
          configMap:
            name: fund-allocator
