deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: fund-allocator
  labels:
    app: fund-allocator
spec:
  type: ClusterIP
  selector:
    app: fund-allocator
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 5000
